--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </h2>
                     <p class="text-lg mb-8 text-slate-400 max-w-lg leading-relaxed">
                         Research Assistant at University of Memphis specializing in Visual Question Answering systems and Large Language Models. 
-                        <span class="text-primary font-semibold">Published researcher at ACL 2025 with expertise in AI model evaluation and NLP.</span>
+                        <span class="text-primary font-semibold">Published a research paper at ACL 2025 with expertise in AI model evaluation and NLP.</span>
                     </p>
                     
                     <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
