--- a/index.html
+++ b/index.html
@@ -571,9 +571,9 @@
                             testing GPT-4o, Claude-3.5-Sonnet, and Gemini-1.5-Flash on modified VQA v2.0 questions. Published at ACL 2025.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-mono">Python</span>
-                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-mono">VLMs</span>
-                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-mono">Statistical Analysis</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-medium">Python</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-medium">VLMs</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-medium">Statistical Analysis</span>
                         </div>
                         <div class="flex space-x-3">
                             <a href="#" class="text-primary hover:text-secondary transition">
@@ -601,9 +601,9 @@
                             through optimization.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-mono">MySQL</span>
-                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-mono">MongoDB</span>
-                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-mono">Performance Optimization</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-medium">MySQL</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-medium">MongoDB</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-medium">Performance Optimization</span>
                         </div>
                         <div class="flex space-x-3">
                             <a href="#" class="text-primary hover:text-secondary transition">
@@ -631,9 +631,9 @@
                             Achieved 92% accuracy with secure authentication and scalable pipelines.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-mono">Python</span>
-                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-mono">BERT</span>
-                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-mono">Streamlit</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-medium">Python</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-medium">BERT</span>
+                            <span class="px-3 py-1 bg-slate-700 rounded-full text-sm font-medium">Streamlit</span>
                         </div>
                         <div class="flex space-x-3">
                             <a href="#" class="text-primary hover:text-secondary transition">
