index.html commit

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                         MS Data Science Graduate | AI & ML Enthusiast
                     </h2>
                     <p class="text-lg mb-8 text-slate-400 max-w-lg leading-relaxed">
-                        Research Assistant at University of Memphis specializing in Visual Question Answering systems and Large Language Models. 
-                        <span class="text-primary font-semibold">Published a research paper at ACL 2025 with expertise in AI model evaluation and NLP.</span>
+                        Currently working as a Research Assistant at the University of Memphis and Sr. Consultant at HeartLand Community Network. 
+                        <span class="text-primary font-semibold">Published a research paper at ACL 2025 on Visual Language Models (VLMs). </span>
                     </p>
                     
                     <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
